Add OTO plugin to requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -151,3 +151,4 @@ webencodings==0.5.1; python_version >= "3.6" and python_full_version < "3.0.0" o
 websockets==8.1; python_full_version >= "3.6.1"
 zopfli==0.1.9; python_version >= "3.7"
 django-celery-results==2.2.0
+-e saleor/plugins/oto/
