--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -223,3 +223,4 @@ zopfli==0.1.9; python_version >= "3.7"
 checkout-sdk==2.0b8
 -e saleor/payment/gateways/tabby/
 -e saleor/payment/gateways/checkout_payment/
+-e saleor/plugins/vendor
