support multi profile in app review

--- a/app.json
+++ b/app.json
@@ -51,6 +51,9 @@
   ],
   "buildpacks": [
     {
+      "url": "heroku-community/multi-procfile"
+    },
+    {
       "url": "heroku/nodejs"
     },
     {
