--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -23,12 +23,12 @@ jobs:
           HD_DEBUG": True
           HD_NPM_CONFIG_PRODUCTION": false
           HD_DEFAULT_FROM_EMAIL": noreply@wecre8.com
-          HD_EMAIL_URL: ${{secrets.EMAIL_URL}}
+          # HD_EMAIL_URL: ${{secrets.EMAIL_URL}}
           HD_SECRET_KEY": alibide
-          HD_AWS_MEDIA_BUCKET_NAME": ${{secrets.AWS_MEDIA_BUCKET_NAME}}
-          HD_AWS_ACCESS_KEY_ID": ${{secrets.AWS_ACCESS_KEY_ID}}
-          HD_AWS_SECRET_ACCESS_KEY": "${{secrets.AWS_SECRET_ACCESS_KEY}}"
-          HD_AWS_STORAGE_BUCKET_NAME: ${{secrets.AWS_STORAGE_BUCKET_NAME}}
+          # HD_AWS_MEDIA_BUCKET_NAME": ${{secrets.AWS_MEDIA_BUCKET_NAME}}
+          # HD_AWS_ACCESS_KEY_ID": ${{secrets.AWS_ACCESS_KEY_ID}}
+          # HD_AWS_SECRET_ACCESS_KEY": "${{secrets.AWS_SECRET_ACCESS_KEY}}"
+          # HD_AWS_STORAGE_BUCKET_NAME: ${{secrets.AWS_STORAGE_BUCKET_NAME}}
           HD_ENABLE_ACCOUNT_CONFIRMATION_BY_EMAIL": False
 
       - name: Deploy Federation
