--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: python:3.8
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == 'false'
 
     services:
       postgres:
