Make sure to load the current deployed PR

--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -44,3 +44,4 @@ jobs:
           procfile: "web: npm start"
         env:
           HD_NODE_ENV: development
+          HD_PR_NUMBER: ${{ github.event.pull_request.number }}
