--- a/.github/workflows/pr-delete.yml
+++ b/.github/workflows/pr-delete.yml
@@ -8,10 +8,6 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Heroku login credentials
         run: |
           cat > ~/.netrc <<EOF
@@ -27,7 +23,7 @@ jobs:
           HEROKU_EMAIL: "hazem.khaled@gmail.com"
 
       - name: Delete Saleor App
-        run: heroku apps:destroy w8-saleor-pr-${{ github.event.pull_request.number }} --confirm
+        run: heroku --confirm apps:destroy w8-saleor-pr-${{ github.event.pull_request.number }} --confirm w8-saleor-pr-${{ github.event.pull_request.number }}
 
       - name: Delete Federation App
-        run: heroku apps:destroy w8-pr-${{ github.event.pull_request.number }} --confirm
+        run: heroku --confirm apps:destroy w8-pr-${{ github.event.pull_request.number }} --confirm w8-pr-${{ github.event.pull_request.number }}
