--- a/.github/workflows/pr-delete.yml
+++ b/.github/workflows/pr-delete.yml
@@ -5,7 +5,7 @@ on:
     types: [closed]
 
 jobs:
-  cleanup:
+  cleanup-pr:
     runs-on: ubuntu-latest
     steps:
       - name: Heroku login credentials
@@ -23,7 +23,7 @@ jobs:
           HEROKU_EMAIL: "hazem.khaled@gmail.com"
 
       - name: Delete Saleor App
-        run: heroku --confirm apps:destroy w8-saleor-pr-${{ github.event.pull_request.number }} --confirm w8-saleor-pr-${{ github.event.pull_request.number }}
+        run: heroku apps:destroy w8-saleor-pr-${{ github.event.pull_request.number }} --confirm w8-saleor-pr-${{ github.event.pull_request.number }}
 
       - name: Delete Federation App
-        run: heroku --confirm apps:destroy w8-pr-${{ github.event.pull_request.number }} --confirm w8-pr-${{ github.event.pull_request.number }}
+        run: heroku apps:destroy w8-pr-${{ github.event.pull_request.number }} --confirm w8-pr-${{ github.event.pull_request.number }}
