Add connet after deploy the PR

--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -44,3 +44,11 @@ jobs:
         env:
           HD_NODE_ENV: development
           HD_PR_NUMBER: ${{ github.event.pull_request.number }}
+
+      - uses: mshick/add-pr-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          message: |
+            Federation: https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/
+            Backend   : https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/
