--- a/.github/workflows/pr-delete.yml
+++ b/.github/workflows/pr-delete.yml
@@ -27,3 +27,13 @@ jobs:
 
       - name: Delete Federation App
         run: heroku apps:destroy w8-pr-${{ github.event.pull_request.number }} --confirm w8-pr-${{ github.event.pull_request.number }}
+
+      - name: Update deployment comment
+        uses: mshick/add-pr-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          message: |
+            Deployments cleaned up
+            Federation: ~~https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/~~
+            Backend   : ~~https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/~~
