revert changed in pytest ci

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,10 +14,9 @@ env:
   SECRET_KEY: ci-test
 
 jobs:
-  build-n-test:
+  build:
     runs-on: ubuntu-latest
     container: python:3.8
-    if: github.event.pull_request.draft == 'false'
 
     services:
       postgres:
