--- a/.github/workflows/pr-delete.yml
+++ b/.github/workflows/pr-delete.yml
@@ -35,5 +35,5 @@ jobs:
         with:
           message: |
             Deployments cleaned up
-            Federation: ~~https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/~~
-            Backend   : ~~https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/~~
+            Federation: ~~https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/~~
+            Backend   : ~~https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/~~
