--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -51,8 +51,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           message: |
-            Federation: https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/
-            Backend   : https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/
+            Federation: https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/
+            Backend   : https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/
 
       - name: Comment Build Fail
         if: ${{ failure() }}
