--- a/requirements.txt
+++ b/requirements.txt
@@ -159,3 +159,4 @@ checkout-sdk==2.0b8
 -e saleor/payment/gateways/checkout_payment/
 -e saleor/plugins/customer_group/
 -e saleor/plugins/vendor
+django-iban
