--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -64,7 +64,7 @@ jobs:
         env:
           HD_NODE_ENV: development
           HD_API_URL: https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/
-          HD_PLUGINS: social-login
+          HD_PLUGINS: social-login,otp
 
   pr-comments:
     needs: deploy-federation-pr
