--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ plugins =
     mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = saleor.settings
+django_settings_module = saleor.wecre8_settings
 
 [mypy-saleor.*.migrations.*]
 ignore_errors = True
