Add pytest-socket to make sure that we don't call external API in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ documentation = "https://docs.saleor.io/"
   types-python-dateutil = "^2.8.0"
   # django-stubs locked to 1.8.0 due to https://github.com/typeddjango/django-stubs/issues/700
   django-stubs = "1.8.0"
+  pytest-socket = "^0.5.1"
 
 [tool.black]
 target_version = [ "py35", "py36", "py37", "py38" ]
