--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,10 +1,10 @@
 adyen==4.0.0
 amqp==5.0.9; python_version >= "3.7"
 aniso8601==7.0.0
-asgiref==3.5.0; python_version >= "3.7" and python_version < "4.0"
+asgiref==3.5.0; python_version >= "3.7"
 astroid==2.9.3; python_full_version >= "3.6.2"
-atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
-attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
+attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 authorizenet==1.1.4
 babel==2.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 beautifulsoup4==4.7.1
@@ -18,19 +18,19 @@ brotli==1.0.9; platform_python_implementation == "CPython" and python_version >=
 brotlicffi==1.0.9.2; platform_python_implementation != "CPython" and python_version >= "3.7"
 cachetools==5.0.0; python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
 celery==5.1.2; python_version >= "3.6"
-certifi==2021.10.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "3.10"
+certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.15.0; platform_python_implementation != "CPython" and python_version >= "3.7"
 cfgv==3.3.1; python_full_version >= "3.6.1"
-charset-normalizer==2.0.11; python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "3.10"
+charset-normalizer==2.0.11; python_full_version >= "3.6.0" and python_version >= "3"
 click-didyoumean==0.3.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
 click-plugins==1.1.1; python_version >= "3.6"
 click-repl==0.2.0; python_version >= "3.6"
 click==7.1.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version < "4.0.0"
 codecov==2.1.12; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-colorama==0.4.4; sys_platform == "win32" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows") and (python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0")
-coverage==6.3; python_version >= "3.7"
+colorama==0.4.4; sys_platform == "win32" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows")
+coverage==6.3.1; python_version >= "3.7"
 cssselect2==0.4.1; python_version >= "3.6"
-deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
+deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 distlib==0.3.4; python_full_version >= "3.6.1"
 dj-database-url==0.5.0
 dj-email-url==1.0.4
@@ -93,9 +93,9 @@ html2text==2020.1.16; python_version >= "3.5"
 html5lib==1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 httptools==0.1.2; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
 identify==2.4.6; python_version >= "3.7" and python_full_version >= "3.6.1"
-idna==3.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "3.10"
+idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 importlib-metadata==4.10.1; python_version < "3.10" and python_version >= "3.7"
-iniconfig==1.1.1; python_version >= "3.7"
+iniconfig==1.1.1; python_version >= "3.6"
 isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
 jaeger-client==4.8.0; python_version >= "3.7"
 jinja2==3.0.3; python_version >= "3.6"
@@ -119,13 +119,13 @@ nodeenv==1.6.0; python_full_version >= "3.6.1"
 oauthlib==3.2.0; python_version >= "3.6"
 openpyxl==3.0.9; python_version >= "3.6"
 opentracing==2.4.0
-packaging==21.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+packaging==21.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pathspec==0.9.0; python_full_version >= "3.6.2"
 petl==1.7.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 phonenumberslite==8.12.42
 pillow==9.0.0; python_version >= "3.7"
 platformdirs==2.4.1; python_version >= "3.7" and python_full_version >= "3.6.2"
-pluggy==1.0.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pre-commit==2.17.0; python_full_version >= "3.6.1"
 prices==1.1.0
 promise==2.3; python_version >= "3.6" and python_version < "4.0"
@@ -133,7 +133,7 @@ prompt-toolkit==3.0.26; python_full_version >= "3.6.2" and python_version >= "3.
 proto-plus==1.19.9; python_version >= "3.6"
 protobuf==3.19.4
 psycopg2-binary==2.9.3; python_version >= "3.6"
-py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pyasn1-modules==0.2.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 pyasn1==0.4.8; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7") or python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
 pybars3==0.9.7
@@ -148,7 +148,7 @@ pylint-django==2.5.0
 pylint-plugin-utils==0.7; python_full_version >= "3.6.2"
 pylint==2.12.2; python_full_version >= "3.6.2"
 pymeta3==0.5.1
-pyparsing==3.0.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+pyparsing==3.0.7; python_version >= "3.6"
 pyphen==0.12.0; python_version >= "3.7"
 pytest-celery==0.0.0
 pytest-cov==3.0.0; python_version >= "3.6"
@@ -156,6 +156,7 @@ pytest-django-queries==1.2.0
 pytest-django==4.5.2; python_version >= "3.5"
 pytest-forked==1.4.0; python_version >= "3.6"
 pytest-mock==3.7.0; python_version >= "3.7"
+pytest-socket==0.5.1; python_version >= "3.7" and python_version < "4.0"
 pytest-vcr==1.0.2
 pytest-xdist==2.5.0; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
@@ -168,7 +169,7 @@ python-magic-bin==0.4.14; sys_platform == "win32"
 python-magic==0.4.24; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 python-slugify==4.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "3.10"
 pytimeparse==1.1.8
-pytz==2021.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.4.0" and python_version >= "3.6" and python_version < "4.0"
+pytz==2021.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pywatchman==1.4.1
 pyxb==1.2.5
 pyyaml==6.0; python_version >= "3.6" and python_full_version >= "3.6.1"
@@ -185,7 +186,7 @@ six==1.16.0; python_full_version >= "3.6.1" and python_version < "3.10" and pyth
 smmap==5.0.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version < "3.10" and python_version >= "3.7"
 snowballstemmer==2.2.0; python_version >= "3.6"
 soupsieve==2.3.1; python_version >= "3.6"
-sqlparse==0.4.2; python_version >= "3.6" and python_version < "4.0"
+sqlparse==0.4.2; python_version >= "3.6"
 starkbank-ecdsa==2.0.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 stripe==2.65.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 sympy==1.9; python_version >= "3.6"
@@ -193,7 +194,7 @@ text-unidecode==1.3
 threadloop==1.0.2; python_version >= "3.7"
 thrift==0.15.0; python_version >= "3.7"
 tinycss2==1.1.1; python_version >= "3.6"
-toml==0.10.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
+toml==0.10.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
 tomli==1.2.3; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
 tornado==6.1; python_version >= "3.7"
 tox==3.24.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -206,7 +207,7 @@ types-urllib3==1.26.8
 typing-extensions==4.0.1; python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.10"
 typing-inspect==0.7.1; python_version >= "3.6"
 unidecode==1.3.2; python_version >= "3.6" and python_version < "4.0"
-urllib3==1.26.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "3.10" and python_version >= "3.7"
+urllib3==1.26.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "3.10" and python_version >= "3.6"
 uvicorn==0.13.4
 uvloop==0.16.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.7"
 vcrpy==4.1.1; python_version >= "3.5"
@@ -214,10 +215,10 @@ vine==5.0.0; python_version >= "3.7"
 virtualenv==20.13.0; python_full_version >= "3.6.1"
 watchgod==0.7; python_version >= "3.5"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
-weasyprint==54.0; python_version >= "3.6"
+weasyprint==54.1; python_version >= "3.6"
 webencodings==0.5.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 websockets==8.1; python_full_version >= "3.6.1"
-wrapt==1.13.3; python_full_version >= "3.6.2" and python_version >= "3.5" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.5.0")
+wrapt==1.13.3; python_full_version >= "3.6.2" and python_version >= "3.5" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 yarl==1.7.2; python_version >= "3.6"
 zipp==3.7.0; python_version < "3.10" and python_version >= "3.7"
 zopfli==0.1.9; python_version >= "3.7"
