--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,3 +1,4 @@
+
 adyen==4.0.0
 amqp==5.0.9; python_version >= "3.7"
 aniso8601==7.0.0
@@ -28,7 +29,7 @@ click-repl==0.2.0; python_version >= "3.6"
 click==7.1.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version < "4.0.0"
 codecov==2.1.12; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 colorama==0.4.4; sys_platform == "win32" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows")
-coverage==6.3; python_version >= "3.7"
+coverage==6.3.1; python_version >= "3.7"
 cryptography==36.0.1; python_version >= "3.6"
 cssselect2==0.4.1; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -157,6 +158,7 @@ pytest-django-queries==1.2.0
 pytest-django==4.5.2; python_version >= "3.5"
 pytest-forked==1.4.0; python_version >= "3.6"
 pytest-mock==3.7.0; python_version >= "3.7"
+pytest-socket==0.5.1; python_version >= "3.7" and python_version < "4.0"
 pytest-vcr==1.0.2
 pytest-xdist==2.5.0; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
@@ -215,7 +217,7 @@ vine==5.0.0; python_version >= "3.7"
 virtualenv==20.13.0; python_full_version >= "3.6.1"
 watchgod==0.7; python_version >= "3.5"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
-weasyprint==54.0; python_version >= "3.6"
+weasyprint==54.1; python_version >= "3.6"
 webencodings==0.5.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 websockets==8.1; python_full_version >= "3.6.1"
 wrapt==1.13.3; python_full_version >= "3.6.2" and python_version >= "3.5" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
