Add DJANGO_SETTINGS_MODULE to Pytest

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -91,4 +91,6 @@ jobs:
       - name: Run Linters and Checks
         run: |
           pre-commit run --all
+        env:
+          DJANGO_SETTINGS_MODULE: "saleor.wecre8_settings"
         if: ${{ always() }}
