Port NP Atobarai gateway to 3.1 (#8684)
* Port net protections (#8640) to 3.1

* Add NP final code review feedback onto 3.1

* Fix optional sku in NP payload & add docstrings

* Refactor tracking_number_updated

* Change NetProtections timeout value to 20

* Do not use f-strings in logger warnings

* Trace only http requests

* Simplify code

* Add comment about longer than usual timeout period

* Remove order from process payment

* Add comment for 400 status code

* Reduce scope of Posuto context manager

* Refactor voucher and shipping amount for payment lines data

* Update PaymentResult.psp_reference type to Optional[str]

* Add handler for report error in transaction reregistration

* Add docstrings to goods functions

* Add FOR_REREGISTRATION payment status

* Refactor create_refund_data

* Fix refund data

* Add docstrings to goods functions

* Add prefetch to _create_refund_manual_amount

* Move refund logic to NP

* Fix billing amount for partial refunds

* Fix multiple shipping refunds

* Set currency to JPY

* WIP fix refunds

* Clean up code

* Refactor

* Fix get_goods_with_refunds for all returned products

Co-authored-by: Mateusz Grzyb <grzybmateusz@protonmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,7 @@ packaging==21.3; python_version >= "3.6"
 petl==1.7.7; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 phonenumberslite==8.12.43
 pillow==9.0.1; python_version >= "3.7"
+posuto==2021.10.0
 prices==1.1.0
 promise==2.3
 prompt-toolkit==3.0.28; python_full_version >= "3.6.2" and python_version >= "3.6"
