--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -69,7 +69,7 @@ jobs:
         env:
           HD_NODE_ENV: development
           HD_API_URL: https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/
-          HD_PLUGINS: social-login provinces otp vendor
+          HD_PLUGINS: social-login provinces otp vendor celebrity
 
   pr-comments:
     needs: deploy-federation-pr
