Use deployments instead of comments

--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -8,6 +8,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Create Backend Deployment Link
+        uses: bobheadxi/deployments@v0.6.2
+        id: deployment_backend
+        with:
+          step: start
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: Preview Backend
+          ref: ${{ github.head_ref }}
+
       - name: Deploy Saleor
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
@@ -39,14 +48,16 @@ jobs:
         env:
           HD_DJANGO_SETTINGS_MODULE: "saleor.wecre8_settings"
 
-      - name: Comment Build Fail
-        if: ${{ failure() }}
-        uses: mshick/add-pr-comment@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Update Backend Deployment Link Status
+        if: always()
+        uses: bobheadxi/deployments@v0.6.2
         with:
-          message: |
-            🐞🐞🐞🐞🐞🐞🐞🐞 BUILD FAIL 🐞🐞🐞🐞🐞🐞🐞🐞
+          step: finish
+          env_url: https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/
+          token: ${{ secrets.GITHUB_TOKEN }}
+          status: ${{ job.status }}
+          logs: https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/
+          deployment_id: ${{ steps.deployment_backend.outputs.deployment_id }}
 
   deploy-federation-pr:
     needs: deploy-saleor-pr
@@ -56,6 +67,15 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: wecre8-ecommerce/gql-federation-gateway
+
+      - name: Create Gateway Deployment Link
+        uses: bobheadxi/deployments@v0.6.2
+        id: deployment_gateway
+        with:
+          step: start
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: Preview Backend
+          ref: ${{ github.head_ref }}
 
       - name: Deploy Federation
         uses: akhileshns/heroku-deploy@v3.12.12
@@ -71,15 +91,13 @@ jobs:
           HD_API_URL: https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/
           HD_PLUGINS: social-login provinces otp vendor
 
-  pr-comments:
-    needs: deploy-federation-pr
-    runs-on: ubuntu-latest
-    steps:
-      - name: Comment Deploy Links
-        uses: mshick/add-pr-comment@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Update Gateway Deployment Link Status
+        if: always()
+        uses: bobheadxi/deployments@v0.6.2
         with:
-          message: |
-            Federation: https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com/
-            Backend   : https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/graphql/
+          step: finish
+          env_url: https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com//graphql/
+          token: ${{ secrets.GITHUB_TOKEN }}
+          status: ${{ job.status }}
+          logs: https://w8-pr-${{ github.event.pull_request.number }}.herokuapp.com//graphql/
+          deployment_id: ${{ steps.deployment_gateway.outputs.deployment_id }}
